[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lampistero"
version = "0.1.28"
description = "Graph building functionality for Lampistero"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Cesar Sanz Martinez" }
]
dependencies = [
    "pydantic",
    "langchain",
    "langgraph",
    "langchain-google-genai",
    "langchain-community",
    "langchain_deepseek",
    "langchain_openai",
    "langchain-qdrant",
    "fastembed",
    "dockersecrets @ git+https://github.com/csanz91/docker_secrets",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lampistero"]

[tool.hatch.metadata]
allow-direct-references = true